# mvaformat

./: .gitignore  CMakeLists.txt  LICENSE  mvaformatConfig.cmake.in
api/OpenMVS/: ARReader.cpp  ARWriter.cpp  ARWriter.h
apps/: CMakeLists.txt
apps/pointextract/: CMakeLists.txt  main.cpp
cmake/: deps.cmake
pybind11/: CMakeLists.txt  pymvaformat_pybind11.cpp  pymvaformat_pybind11_scene.cpp  pymvaformat_pybind11_scene.h  pymvaformat_pybind11_types.hpp  setup.py
pybind11/scripts/: mvaPointExtract.py  mvaVisualize.py
src/: CMakeLists.txt  config.h  mvaformat.cpp  mvaformat.h  mvaformat_impl.hpp
tests/: CMakeLists.txt  test_readtestdata.cpp
tests/testdata/: version3.mva  version3_gzstream.mva
